--- a/detalhes-cobranca.html
+++ b/detalhes-cobranca.html
@@ -29,10 +29,11 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle white" data-bs-toggle="dropdown" href="#"
                                         role="button" aria-expanded="false">
-                                        <!-- rounded-circle -->                                        
+                                        <!-- rounded-circle -->
+                                        Luciano Antunes
                                         <img src="assets/img/profile-picture.png" alt="User" title="User" />
                                     </a>
-                                    <ul class="dropdown-menu">                                                                        
+                                    <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="#">Meu Perfil</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
@@ -100,7 +101,7 @@
                     <div class="container">
                         <div class="d-flex justify-content-between align-items-center flex-wrap">
                             <div>
-                                <h1 class="blue">Cobranças</h1>
+                                <h1 class="blue">Colégio Farroupilha</h1>
                             </div>
                             <div class="d-flex align-items-center flex-wrap">
                                 <div class="input-group mx-3 pb-2">
@@ -132,92 +133,84 @@
                                 </div>
 
                             </div>
+                        </div>
+                        <!-- <p onclick="OpenCloseMenu()" class="text-end">Teste</p> -->
+                        <div class="row mt-5">
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="cobranca-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
                             </div>
-                            <!-- <p onclick="OpenCloseMenu()" class="text-end">Teste</p> -->
-                            <div class="row mt-5">
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="detalhes-cobranca.html">Visualizar</a>
-                                    </div>
-                                </div>
 
-                                <div class="col-12 col-lg-4 col-sm-12 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
+                            <div class="col-12 col-lg-4 mb-3">
+                                <div class="card p-2 border-left-color-secondary">
+                                    <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                        <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                        <p class="text-center black">1 de 3</p>
                                     </div>
+                                    <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
                                 </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
                             </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="cobranca-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="cobranca-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="cobranca-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="cobranca-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/all.min.js"></script>
